--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/motion": "^3.0.3",
     "eslint": "^9.25.1",
-    "nuxt": "^3.17.1",
+    "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
